# ircsync

./: CMakeLists.txt  README.md  irc.cpp  irc.hpp  main.cpp  meson.build
